--- a/package.json
+++ b/package.json
@@ -25,11 +25,13 @@
     "@nestjs/common": "^7.6.15",
     "@nestjs/core": "^7.6.15",
     "@nestjs/platform-express": "^7.6.13",
+    "@nestjs/swagger": "^5.1.0",
     "@nestjs/typeorm": "^8.0.2",
     "config": "^3.3.6",
     "reflect-metadata": "^0.1.13",
     "rimraf": "^3.0.2",
-    "rxjs": "^6.6.7"
+    "rxjs": "^6.6.7",
+    "typeorm": "^0.2.38"
   },
   "devDependencies": {
     "@nestjs/cli": "^7.5.6",
